[tool.poetry]
name = "rl_ws"
version = "0.1.0"
description = "Reinforcement Learning"
authors = ["Jonathan Cagua <jonathan.cagua@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
numpy = "^1.26.0"
tensorflow = "^2.15.0"
gym = {extras = ["classic-control"], version = "^0.26.2"}
tqdm = "^4.67.1"
matplotlib = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
